package pattern.structural.adapter;

public interface ImperialTemperatureSystem {
    double getTemperature();

    void setTemperature(double temperature);
}
