package pattern.structural.adapter;

public interface MetricTemperatureSystem {
    double getTemperature();

    void setTemperature(double temperature);
}
